# godotcoacd2

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct  coacd_build.py  third_party_licenses.py  todot.txt
.github/actions/godot-cache-restore/: action.yml
.github/actions/godot-cache-save/: action.yml
.github/actions/setup-godot-cpp/: action.yml
.github/workflows/: android.yaml  build-all.yaml  build.yaml  ci-cmake.yml  copy-licenses.yaml  ios.yaml  linux.yaml  macos.yaml  web.yaml  windows.yaml  windows.yml
addons/godotcoacd/: godotcoacd.gd
addons/godotcoacd/ui/: settings_button.tscn
doc_classes/: CoACD.xml  CoACDSettings.xml
plugin/addons/godotcoacd/: editor_settings.tres  godotcoacd.gd  plugin.cfg
plugin/addons/godotcoacd/plugin/: godotcoacd.gd
plugin/addons/godotcoacd/third-party-licenses/nanoflann/: LICENSE.txt
src/: coacd.cpp  coacd.h  coacd_settings.cpp  coacd_settings.h  register_types.cpp  register_types.h
tests/: test_all.py  windows.py
